<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <!--background atas mulai-->
    <ImageView
        android:id="@+id/img1_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_atas" />
    <!--Background atas selesai-->

    <!--Text Selamat Datang Mulai-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text1_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/Welcome"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/text2_register"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/textapp"
            android:textAlignment="center"
            android:textSize="14sp" />
    </LinearLayout>
    <!--Text Selamat Datang Selesai-->

    <!--Kuisoner Mulai-->
    <LinearLayout
        android:id="@+id/layout2_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingTop="10dp"
        android:paddingEnd="30dp">

        <EditText
            android:id="@+id/edt_nama_register"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:background="@drawable/search_shape"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/Input_NamaLengkap"
            android:inputType="text"
            android:paddingStart="10dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edt_username_register"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/search_shape"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/Input_Username"
            android:inputType="text"
            android:paddingStart="10dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edt_buatsandi_reguler"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/search_shape"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/Input_Password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edt_sandilagi_register"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/search_shape"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/Konfirmasi_Password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:width="300dp"
            android:background="@drawable/card_shape"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/Register_Text"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
    <!--Kuisoner Selesai-->

    <!--Register Button Dimulai-->
    <LinearLayout
        android:id="@+id/layout3_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text3_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/Sudah_Punya_Akun"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text4_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/Login_Text"
            android:textColor="@color/red"
            android:textSize="12sp" />

    </LinearLayout>
    <!--Register Button Selesai-->

</androidx.appcompat.widget.LinearLayoutCompat>