<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <!--Background-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_atas" />
    </LinearLayout>
    <!--Background Selesai-->

    <!--Logo Dimulai-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center_horizontal"
            android:text="@string/Welcome"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinssemibold"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>
    <!--Logo Selesai-->

    <!--Inputan Dimulai-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <EditText
            android:id="@+id/edt_username_login"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:background="@drawable/search_shape"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/Input_Username"
            android:inputType="text"
            android:paddingStart="10dp"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/edt_pass_login"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/search_shape"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/Input_Password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_lupakatasandi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppinsregular"
            android:paddingTop="10dp"
            android:text="@string/Lupa_Kata_Sandi"
            android:textColor="@color/red" />

        <Button
            android:id="@+id/btn_login1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:width="300dp"
            android:background="@drawable/card_shape"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/Login_Text"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
    <!--Inputan Selesai-->

    <!--Text Tambahan-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_belumpunyaakun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/Belum_Punya_Akun"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/Register_Text"
            android:textColor="@color/red"
            android:textSize="12sp" />

    </LinearLayout>
    <!--Text Tambahan Selesai-->

</androidx.appcompat.widget.LinearLayoutCompat>