<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


<!--Teks Kategori Dan Teks Lihat Semua Mulai-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppinsbold"
            android:padding="20dp"
            android:text="@string/Kategori_Text"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:padding="20dp"
            android:text="@string/LihatSemua_Text"
            android:textColor="@color/red"
            android:id="@+id/ls0"
            android:clickable="true"/>
    </LinearLayout>
<!--Teks Kategori Dan Lihat Semua Selesai-->


<!--Layout Pertama Dimulai-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
<!--Layout Kedua Dimulai-->
        <com.jakgin.tokoonline.Widget.WrapElement
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:clickable="true"
            android:onClick="openPakaianActivity">

            <com.jakgin.tokoonline.Widget.CardELement
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_shape"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/icon_pakaian"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/Description_Icon_Pakaian"
                    android:src="@drawable/ic_pakaian" />

            </com.jakgin.tokoonline.Widget.CardELement>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/Pakaian_Text"
                android:textAlignment="center"
                android:textSize="12sp" />

        </com.jakgin.tokoonline.Widget.WrapElement>

        <RelativeLayout
            android:layout_width="15dp"
            android:layout_height="wrap_content" />

        <com.jakgin.tokoonline.Widget.WrapElement
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:clickable="true"
            android:onClick="openElektronikActivity">

            <com.jakgin.tokoonline.Widget.CardELement
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_shape"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/Description_Icon_Elektronik"
                    android:src="@drawable/ic_headphone" />

            </com.jakgin.tokoonline.Widget.CardELement>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/Elektronik_Text"
                android:textAlignment="center"
                android:textSize="12sp" />

        </com.jakgin.tokoonline.Widget.WrapElement>

        <RelativeLayout
            android:layout_width="15dp"
            android:layout_height="wrap_content" />

        <com.jakgin.tokoonline.Widget.WrapElement
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:clickable="true"
            android:onClick="openMakeupActivity">

            <com.jakgin.tokoonline.Widget.CardELement
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_shape"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/Description_Icon_MakeUp"
                    android:src="@drawable/ic_kecantikan" />

            </com.jakgin.tokoonline.Widget.CardELement>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/Makeup_Text"
                android:textAlignment="center"
                android:textSize="12sp" />

        </com.jakgin.tokoonline.Widget.WrapElement>

        <RelativeLayout
            android:layout_width="15dp"
            android:layout_height="wrap_content" />

        <com.jakgin.tokoonline.Widget.WrapElement
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:clickable="true"
            android:onClick="openMakananActivity">

            <com.jakgin.tokoonline.Widget.CardELement
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_shape"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/Description_Icon_Makanan"
                    android:src="@drawable/ic_makanan" />

            </com.jakgin.tokoonline.Widget.CardELement>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/Makanan"
                android:textAlignment="center"
                android:textSize="12sp" />

        </com.jakgin.tokoonline.Widget.WrapElement>

    </LinearLayout>
</LinearLayout>
