<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MakeupActivity"
    android:orientation="vertical">

    <!--Toolbar Mulai-->
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Semuwhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_back" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.jakgin.tokoonline.Widget.SearchBar
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/search_shape_produk"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/Description_Icon_Search"
                        android:src="@drawable/ic_search" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppinsregular"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/SearchText"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/Description_Icon_Camera"
                        android:src="@drawable/ic_camera" />
                </com.jakgin.tokoonline.Widget.SearchBar>

            </LinearLayout>
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>
    <!--Toolbar Selesai-->

    <!--Content-->
    <androidx.core.widget.NestedScrollView
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scrollbars="none">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:fontFamily="@font/poppinsbold"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/DeskripsiAplikasi"/>
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/ic_logo"/>
                <TextView
                    android:fontFamily="@font/poppinsregular"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textSize="12sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Teks_About"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Dev"
                    android:textAlignment="center"
                    android:fontFamily="@font/poppinsbold"
                    android:textSize="20sp"/>
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/aing"
                    android:cropToPadding="true"
                    android:paddingBottom="10dp"
                    android:adjustViewBounds="true"/>
                <TextView
                    android:textSize="12sp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/DataDiriPengembang"
                    android:fontFamily="@font/poppinsregular"/>


            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
    <!--Content Selesai-->

    <!--Nav Bottom-->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navbar_bottom"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:background="@color/Semuwhite"
        app:menu="@menu/menu_bawah" />
    <!--Nav Bottom-->

</androidx.appcompat.widget.LinearLayoutCompat>