<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.jakgin.tokoonline.Widget.Banner
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:background="@drawable/card_shape">
            <LinearLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teks_banner"
                android:fontFamily="@font/poppinsregular"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="center"/>

                <TextView
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/promosi_banner"
                    android:fontFamily="@font/poppinsregular"
                    android:textColor="@color/red"
                    android:textSize="12sp"
                    android:gravity="center"/>
                <TextView
                    android:padding="10dp"
                    android:background="@drawable/button_shape"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/Check_Out"
                    android:fontFamily="@font/poppinsregular"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:gravity="center"/>
            </LinearLayout>

          <ImageView
              android:layout_width="180dp"
              android:layout_height="match_parent"
              android:src="@drawable/christy"/>

        </com.jakgin.tokoonline.Widget.Banner>

    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>